--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -10,5 +10,15 @@
     </p>
   <% end %>
 </div>
+<section class="sample-sortable">
+<h3>Sample Sortable.js</h3>
+# views/welcome/index.html.erb
+<ul data-controller="sortable">
+  <li>Item 1</li>
+  <li>Item 2</li>
+  <li>Item 3</li>
+  <li>Item 4</li>
+</ul>
+</section>
 
 <%= link_to "New entry", new_entry_path %>
