--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Entries!</h1>
+<h1>Entries</h1>
 <%= render(Entry::ListComponent.new(entries: @entries)) %>
 
 <section class="sample-sortable">
