--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,9 @@
 // Sassy
 h1 {
-  color: red;
+  border-bottom: 6px double #000;
+}
+
+h2 {
+  padding: 1rem 2rem;
+  border-left: 4px solid #000;
 }
