--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,16 +1,34 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Entries</h1>
+<h1>Entries limit:3</h1>
+<code>
+  <\%= render(Entry::ListComponent.new(entries: @entries, limit: 3)) %>
+</code>
+<%= render(Entry::ListComponent.new(entries: @entries, limit: 3)) %>
+
+<h1>Entries default limit(5)</h1>
+<code>
+  <\%= render(Entry::ListComponent.new(entries: @entries)) %>
+</code>
+<code>
+class Entry::ListComponent < ViewComponent::Base
+  def initialize(entries:, limit: 5)
+    @entries = entries
+    @limit = limit
+  end
+end
+</code>
 <%= render(Entry::ListComponent.new(entries: @entries)) %>
 
 <section class="sample-sortable">
 <h3>Sample Sortable.js</h3>
 # views/welcome/index.html.erb
 <ul data-controller="sortable">
-  <li>Item 1</li>
-  <li>Item 2</li>
-  <li>Item 3</li>
-  <li>Item 4</li>
+  <%= render(Item::ItemComponent.new(item: 'Item 1')) %>
+  <%= render(Item::ItemComponent.new(item: 'Item 2')) %>
+  <%= render(Item::ItemComponent.new(item: 'Item 3')) %>
+  <%= render(Item::ItemComponent.new(item: 'Item 4')) %>
+  <%= render(Item::ItemComponent.new(item: 'Item 5')) %>
 </ul>
 </section>
 
