--- a/app/components/entry_component.html.erb
+++ b/app/components/entry_component.html.erb
@@ -1,24 +1,10 @@
 <div>
-
-<%= markdown("```ruby 
-def test 
-  puts 'test' 
-end
-```") %>
-
-  <%= render @entry %>
+  <h3><%= @entry.title %></h3>
   <%= created_str %>
+  <p class="three-line-content">
+    <%= plaintext(@entry.body) %>
+  </p>
   <p>
     <%= link_to "Show this entry", @entry %>
   </p>
-  <hr>
-  <h2>toc(@entry.body)</h2>
-  <%= toc(@entry.body) %>
-  <hr>
-  <h2>markdown(@entry.body)</h2>
-  <%= markdown(@entry.body) %>
-  <hr>
-  <h2>plaintext(@entry.body)</h2>
-  <%= plaintext(@entry.body) %>
-  <hr>
 </div>
